# the-last-node

./: README.md
crossbow/: a  bench  bench_db2amp.cpp  debug_latediff.cpp  diffuser  diffuser.cpp  dump  eight_phase.hpp  latediff_params_dump.cpp  latediff_tank.hpp  render_rt60  render_rt60.cpp  setbl_ls_test  stereo_latediff_xfeed.cpp  test  test_SetBL_LS.cpp  test_clipdelay_intfract  test_clipdelay_intfract.cpp  test_correct_mapping.cpp  test_db2amp  test_db2amp.cpp  test_delay_h.cpp  test_dffs_stability.cpp  test_diffuser  test_diffuser.cpp  test_highshelf_plot.cpp  test_latediff_energy.cpp  test_latediff_tank.cpp  test_one_pole_min.cpp  test_realistic_params.cpp  test_rt60_to_af.cpp  test_shelves_noise_fft  test_shelves_noise_fft.cpp  test_tanapprox  test_tanapprox.cpp  test_warp.cpp  test_warpLS.cpp  test_warpls
curses-sc-test/: README.md  loop_sampler.py  requirements.txt  sc_syntax_rulebook.md
wakefield/: .gitignore  CMakeLists.txt  GREYHOLE_INTEGRATION.md  README.md  UI_STYLE_GUIDE.md
wakefield/brainwave/pico/: DACless.cpp  DACless.h  brainwave-osc.ino  sampledata.h
wakefield/lung/: ADCless.cpp  ADCless.h  DACless.cpp  DACless.h  EEncoder.cpp  EEncoder.h  RotarySwitch.cpp  RotarySwitch.h  adc_filter.cpp  adc_filter.h  audio_engine.cpp  audio_engine.h  audio_engine_render.cpp  config_pins.h  driver_sdcard.cpp  driver_sdcard.h  driver_sh1122.cpp  driver_sh1122.h  ladder_filter.cpp  ladder_filter.h  loop-sampler.ino  pico_interp.cpp  pico_interp.h  sf_globals_bridge.cpp  sf_globals_bridge.h  storage_index.cpp  storage_loader.cpp  storage_loader.h  storage_wav_decode.cpp  storage_wav_meta.cpp  storage_wav_meta.h  ui_display.cpp  ui_display.h  ui_input.cpp  ui_input.h  ui_waveform_view.cpp
wakefield/reverb/: GreyholeRaw.dsp  greyhole.cpp  greyhole_dsp.h
wakefield/src/: brainwave_osc.cpp  brainwave_osc.h  chaos.h  clock.cpp  clock.h  constraint.cpp  constraint.h  cpu_monitor.cpp  cpu_monitor.h  envelope.cpp  envelope.h  euclidean.cpp  euclidean.h  filters.hpp  lfo.cpp  lfo.h  loop_manager.cpp  loop_manager.h  looper.h  main.cpp  markov.cpp  markov.h  midi.cpp  midi.h  modulation.h  oscillator.cpp  oscillator.h  parameter_smoother.h  pattern.cpp  pattern.h  preset.cpp  preset.h  reverb.cpp  reverb.h  sample_bank.cpp  sample_bank.h  sampler.cpp  sampler.h  sequencer.cpp  sequencer.h  (+8 more)
wakefield/src/ui/: ui_core.cpp  ui_drawing.cpp  ui_help.cpp  ui_input.cpp  ui_mod.cpp  ui_mod_data.cpp  ui_mod_data.h  ui_parameters.cpp  ui_presets.cpp  ui_sample_browser.cpp  ui_utils.cpp  ui_utils.h
wakefield/src/ui/pages/: ui_page_brainwave.cpp  ui_page_chaos.cpp  ui_page_clock.cpp  ui_page_config.cpp  ui_page_envelope.cpp  ui_page_filter.cpp  ui_page_fm.cpp  ui_page_lfo.cpp  ui_page_looper.cpp  ui_page_main.cpp  ui_page_mixer.cpp  ui_page_mod.cpp  ui_page_oscillator.cpp  ui_page_parameters.cpp  ui_page_reverb.cpp  ui_page_sampler.cpp
wakefield/src/ui/sequencer/: ui_sequencer_actions.cpp  ui_sequencer_drawing.cpp  ui_sequencer_fields.cpp  ui_sequencer_input.cpp  ui_sequencer_state.cpp
(+2 files in other folders)
